# Moonix

./: .gitignore  Cargo.toml  README.md  build.sh  grub.cfg  run.sh  soutput.txt
.cargo/: config.toml
src/: allocator.rs  main.rs
src/io/: mod.rs  serial.rs
